src/Navigation-SideMenu.css
.project-side-menu-root {
  /* Layout */
  position: absolute;
  top: 0px;
  left: 0px;
  padding-block: 5vh;

  /* Box Model */
  width: 100vw;
  height: 100vh;

  /* others */
  background-color: #E6E6E6;
}

.project-side-menu-list {
  /* width: 100%;
  text-align: right; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.side-menu-item {
  /* others */
  list-style: none;
  font-size: 2rem;
}
.side-menu-item span:hover,
.side-menu-close-button i:hover {
  cursor: pointer;
  color: #E63333;
}

